modify contests to comply with cmake

--- a/src/makefile
+++ b/src/makefile
@@ -1,6 +1,6 @@
 all: compile
 
-compile: ./main.cpp
+compile: main.cpp
 	g++ -c ./main.cpp ./dinosaur.cpp ./t_rex.cpp ./animation.cpp ./game_manager.cpp ./ground.cpp ./cacti.cpp ./constantsLoader.cpp
 	g++ main.o dinosaur.o t_rex.o animation.o game_manager.o ground.o cacti.o constantsLoader.o \
 	-o app -lsfml-graphics -lsfml-window -lsfml-system
