rename residual constantsLoader to variablesLoader

--- a/src/makefile
+++ b/src/makefile
@@ -1,8 +1,8 @@
 all: compile
 
 compile: main.cpp
-	g++ -c ./main.cpp ./dinosaur.cpp ./t_rex.cpp ./animation.cpp ./game_manager.cpp ./ground.cpp ./cacti.cpp ./constantsLoader.cpp
-	g++ main.o dinosaur.o t_rex.o animation.o game_manager.o ground.o cacti.o constantsLoader.o \
+	g++ -c ./main.cpp ./dinosaur.cpp ./t_rex.cpp ./animation.cpp ./game_manager.cpp ./ground.cpp ./cacti.cpp ./variables_loader.cpp
+	g++ main.o dinosaur.o t_rex.o animation.o game_manager.o ground.o cacti.o variables_loader.o \
 	-o app -lsfml-graphics -lsfml-window -lsfml-system
 
 
